--- a/urltest.ini
+++ b/urltest.ini
@@ -28,6 +28,7 @@ custom_proxy_group=🌍 国际媒体`select`[]🟢 直接连接`[]😈 全部节
 custom_proxy_group=🌏 国内媒体`select`[]🟢 直接连接`[]😈 全部节点`[]📌 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点
 custom_proxy_group=🐟 漏网之鱼`select`[]🟢 直接连接`[]😈 全部节点`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换`[]🟢 直接连接
 custom_proxy_group=📺 XPTV`select`[]🟢 直接连接
+custom_proxy_group=📺 emby`select`[]🟢 直接连接`[]😈 全部节点`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换`[]🟢 直接连接
 custom_proxy_group=🎵 YouTubeMusic`select`[]🟢 直接连接`[]😈 全部节点`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
 
 ; ！！！！！！！！！前置规则优先级更高，会优先匹配
