--- a/urltest.ini
+++ b/urltest.ini
@@ -4,15 +4,15 @@
 
 custom_proxy_group=😈 全部节点`url-test`.*`http://www.gstatic.com/generate_204`300
 custom_proxy_group=📌 手动切换`select`.*
-custom_proxy_group=🌈 IPLC节点`select`(Game|game|游戏|限速|IPLC|IEPL|打機)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🇭🇰 香港节点`select`(?i)(HK|Hong.*?Kong|香港|港|深港|沪港|呼港|HKT|HKBN|HGC|WTT|CMI|京港)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🇨🇳 台湾节点`select`(?i)(TW|Taiwan|台湾|台北|台中|新北|彰化|CHT|HINET|台)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🇸🇬 狮城节点`select`(SG|Singapore|新加坡|狮城|沪新|京新|泉新|穗新|深新|杭新)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🇯🇵 日本节点`select`(JP|Japan|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|日)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🇰🇷 韩国节点`select`(KR|Korean|韩国|首尔|韩)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🇺🇲 美国节点`select`(US|America|UnitedStates|英|美国|京美|沪美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|美)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🇷🇺 俄国节点`select`(RU|Russia|莫斯科|俄罗斯|俄)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🇮🇳 印度节点`select`(IRI|India|印度|印|越)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🌈 IPLC节点`url-test`(Game|game|游戏|限速|IPLC|IEPL|打機)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🇭🇰 香港节点`url-test`(?i)(HK|Hong.*?Kong|香港|港|深港|沪港|呼港|HKT|HKBN|HGC|WTT|CMI|京港)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🇨🇳 台湾节点`url-test`(?i)(TW|Taiwan|台湾|台北|台中|新北|彰化|CHT|HINET|台)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🇸🇬 狮城节点`url-test`(SG|Singapore|新加坡|狮城|沪新|京新|泉新|穗新|深新|杭新)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🇯🇵 日本节点`url-test`(JP|Japan|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|日)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korean|韩国|首尔|韩)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🇺🇲 美国节点`url-test`(US|America|UnitedStates|英|美国|京美|沪美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|美)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🇷🇺 俄国节点`url-test`(RU|Russia|莫斯科|俄罗斯|俄)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🇮🇳 印度节点`url-test`(IRI|India|印度|印|越)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🟢 直接连接`select`[]DIRECT
 custom_proxy_group=🎰 任天堂网络`select`[]🟢 直接连接`[]😈 全部节点`[]🌈 IPLC节点`[]🇯🇵 日本节点`[]📌 手动切换
 custom_proxy_group=🎰 任天堂下载`select`[]🟢 直接连接`[]😈 全部节点`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
